resources/js/assets/sass/partials/_app.scss
$header-height: 50px;
$sidebar-width: 200px;
$sidebar-mini-width: 54px;

.app {
	height: 100%;
	overflow: hidden;
	box-sizing: border-box;
	flex-direction: column;

	&-header {
		@include flexbox(row, center, flex-start);
		height: $header-height;
		color: var(--el-text-color-primary);
		background: #fff;
		box-shadow: var(--el-box-shadow-light);
		border-bottom: 1px solid var(--el-border-color-light);
		padding: 0 1rem 0 0;
		z-index: 2016;
	}

	&-body {
		@include flexbox();
		flex: 1;
		overflow: hidden;
		position: relative;
		max-width: 100%;
	}

	&-sidebar {
		width: $sidebar-mini-width;
		height: 100%;
		transition: width .2s ease-in-out;
		overflow: hidden;
		border-right: 1px solid var(--el-border-color);
		background: var(--color-primary-back);
		position: relative;
		padding: 10px 0;

		.sidebar-normal {
			display: block;
			transition: all .2s;
			transform: translate3d(-25px, 0, 0);
			opacity: 0;
			white-space: nowrap;
			position: relative;
		}
		
		.sidebar-mini {
			margin-right: 10px;
		}		

		body:not(.sidebar-mini) &,
		&:hover {
			min-width: $sidebar-width;
			width: $sidebar-width;

			.sidebar-normal {
				opacity: 1;
				transform: translate3d(0, 0, 0);
			}
		}

		.sidebar-mini & {
			position: fixed;
			top: $header-height;
			height: 100%;
			z-index: 3;

			&:not(:hover) {
				.nav-group {
					span {
						display: none;
					}

					&:before {
						content: '-';
						text-align: center;
						display: block;
					}
				}
			}
		}
	}

	&-main {
		height: 100%;
		flex: 1;

		.sidebar-mini & {
			padding-left: $sidebar-mini-width;
		}
	}

	&-empty {
		@include flexbox(row, flex-start, center);
		flex: 1;
	}
}

